# aoc2023

./: .gitignore
cpp/: CMakeLists.txt  day1.hpp  day10.hpp  day2.cpp  day2.hpp  day3.hpp  day4.hpp  day5.hpp  day6.hpp  day7.hpp  day8.hpp  day9.hpp  main.cpp  utility.hpp
cpp/data/: asdasd.txt
